Convert to modular application. Upgrade tensorflow library. Reduce application bundle size.